// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`navbar > events > left-click 1`] = `
<div
  class="t-navbar t-navbar--fixed t-safe-area-top t-navbar--visible-animation"
  style="position: fixed;"
>
  <div
    class="t-navbar____placeholder"
  />
  <div
    class="t-navbar__content"
  >
    <div
      class="t-navbar__left"
    >
      <!---->
      
      <svg
        class="t-icon t-icon-app"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M17.5 3.5C15.8431 3.5 14.5 4.84315 14.5 6.5C14.5 8.15685 15.8431 9.5 17.5 9.5C19.1569 9.5 20.5 8.15685 20.5 6.5C20.5 4.84315 19.1569 3.5 17.5 3.5ZM12.5 6.5C12.5 3.73858 14.7386 1.5 17.5 1.5C20.2614 1.5 22.5 3.73858 22.5 6.5C22.5 9.26142 20.2614 11.5 17.5 11.5C14.7386 11.5 12.5 9.26142 12.5 6.5ZM2 2H11V11H2V2ZM4 4V9H9V4H4ZM2 13H11V22H2V13ZM4 15V20H9V15H4ZM13 13H22V22H13V13ZM20 15H15V20H20V15Z"
          fill="currentColor"
        />
      </svg>
      
      <!---->
    </div>
    <div
      class="t-navbar__center"
    >
      <span
        class="t-navbar__center-title"
      >
        标题
      </span>
    </div>
    <!---->
  </div>
</div>
`;

exports[`navbar > events > right-click 1`] = `
<div
  class="t-navbar t-navbar--fixed t-safe-area-top t-navbar--visible-animation"
  style="position: fixed;"
>
  <div
    class="t-navbar____placeholder"
  />
  <div
    class="t-navbar__content"
  >
    <div
      class="t-navbar__left"
    >
      <!---->
      <!---->
      <!---->
    </div>
    <div
      class="t-navbar__center"
    >
      <span
        class="t-navbar__center-title"
      >
        标题
      </span>
    </div>
    <div
      class="t-navbar__right"
    >
      
      <svg
        class="t-icon t-icon-app"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M17.5 3.5C15.8431 3.5 14.5 4.84315 14.5 6.5C14.5 8.15685 15.8431 9.5 17.5 9.5C19.1569 9.5 20.5 8.15685 20.5 6.5C20.5 4.84315 19.1569 3.5 17.5 3.5ZM12.5 6.5C12.5 3.73858 14.7386 1.5 17.5 1.5C20.2614 1.5 22.5 3.73858 22.5 6.5C22.5 9.26142 20.2614 11.5 17.5 11.5C14.7386 11.5 12.5 9.26142 12.5 6.5ZM2 2H11V11H2V2ZM4 4V9H9V4H4ZM2 13H11V22H2V13ZM4 15V20H9V15H4ZM13 13H22V22H13V13ZM20 15H15V20H20V15Z"
          fill="currentColor"
        />
      </svg>
      
    </div>
  </div>
</div>
`;
